# TP1PromptEngineering

./: sa.ipynb  tp1.ipynb
projetdotnet/: .gitignore  ECommerce.csproj  Program.cs  appsettings.json  projetdotnet.sln
projetdotnet/Controllers/: AdminController.cs  AuthController.cs  CartController.cs  OrdersController.cs  PaymentsController.cs  ProductsController.cs
projetdotnet/Models/: Cart.cs  CartItem.cs  Order.cs  OrderItem.cs  Product.cs  User.cs
projetdotnet/Services/: CartService.cs  ICartService.cs  IOrderService.cs  IProductService.cs  IUserService.cs  MongoDBService.cs  OrderService.cs  ProductService.cs  UserService.cs
projetdotnet/wwwroot/: admin.html  cart.html  deconnexion.html  index.html  orders.html  products.html  test-admin.html  test-role.html
projetdotnet/wwwroot/css/: style.css
projetdotnet/wwwroot/js/: admin.js  app.js  auth.js  cart.js  home.js  orders.js  products.js
sma-ss-llms/: .gitignore  main.py  pyproject.toml
